--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^11.0.5",
+    "@astrojs/netlify": "^5.5.3",
     "astro": "^4.15.8"
   }
 }
